CUI-1262 Fix overflow issue of Select

--- a/components/contrib/select/styles/select.less
+++ b/components/contrib/select/styles/select.less
@@ -26,6 +26,8 @@
     font-size: inherit;
     margin: 0;
 
+    overflow: hidden;
+
     position: relative;
 
     color: @font-base-color;
